--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'E186'
 - !lcsh 'United States -- History -- French and Indian War, 1754-1763'
+- GITenberg
 title: 'The Campaign of 1760 in Canada
 
   A Narrative Attributed to Chevalier Johnstone'
